# arp

./: .gitignore  CMakeLists.txt  build.sh  dev.sh  run.sh
src/: main.cpp
src/core/: ArpEngine.hpp  PatternBuilder.hpp  PatternEngine.hpp
src/desktop/: DesktopMidi.cpp  DesktopMidi.hpp
src/plugin/: HostClock.hpp  JuceMidiPorts.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ports/: Clock.hpp  Midi.hpp
src/sim/: SimMidi.hpp
src/ui/: Cli.hpp
